--- a/src/pages/components/RecipeForm/RecipeForm.module.css
+++ b/src/pages/components/RecipeForm/RecipeForm.module.css
@@ -25,3 +25,14 @@
     border-radius: 5px;
     background-color: lightblue;
 }
+
+.form-input {
+    display: flex;
+    flex-direction: column;
+}
+
+.form-input label {
+    font-size: 0.8rem;
+    margin-block-end: 0.2rem;
+    font-weight: 600;
+}
