--- a/src/pages/components/RecipeForm/RecipeForm.module.css
+++ b/src/pages/components/RecipeForm/RecipeForm.module.css
@@ -14,6 +14,10 @@
     z-index: 999;
 }
 
+.recipe-form h3 {
+    margin-block-start: 0;
+}
+
 .recipe-form input[type="text"] {
     padding: 0.5rem 1rem;
     margin-inline: 0.2rem;
@@ -24,6 +28,7 @@
     border: none;
     border-radius: 5px;
     background-color: lightblue;
+    cursor: pointer;
 }
 
 .form-input {
@@ -35,4 +40,16 @@
     font-size: 0.8rem;
     margin-block-end: 0.2rem;
     font-weight: 600;
+}
+
+.recipe-form > span {
+    cursor: pointer;
+    /* align-self: flex-end; */
+}
+
+.instructions {
+    height: 4rem;
+    width: 12.5rem;
+    font-family: Arial, Helvetica, sans-serif;
+    resize: none;
 }
